blueprints/victoria-logs-single/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oathkeeper-proxy
spec:
  endpointSelector:
    matchLabels:
      app: server
      app.kubernetes.io/instance: monitoring-victoria-logs-single
      app.kubernetes.io/name: victoria-logs-single
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - monitoring
            - key: k8s:app.kubernetes.io/name
              operator: In
              values:
                - oathkeeper
      toPorts:
        - ports:
            - port: "9428"
              protocol: TCP
          rules:
            http: [{}]
